k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fmovil
  labels:
    app: fmovil-frontend
    component: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: fmovil-frontend
    component: frontend
  sessionAffinity: None
