k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  namespace: fmovil
  labels:
    app: fmovil-frontend
    component: frontend
  annotations:
    haproxy.router.openshift.io/timeout: "60s"
    haproxy.router.openshift.io/rate-limit-connections: "true"
    haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: "100"
    haproxy.router.openshift.io/rate-limit-connections.rate-http: "1000"
    haproxy.router.openshift.io/rate-limit-connections.rate-tcp: "1000"
spec:
  host: oefa-front.apps.okd-dev.oefa.gob.pe
  to:
    kind: Service
    name: frontend-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
